--- a/public/partials/setting.html
+++ b/public/partials/setting.html
@@ -15,6 +15,7 @@
         <a href="" class="list-group-item" ng-click="selectMenu(7)" ng-class="{active: selectedMenu == 7}" ng-if="['leader', 'admin'].indexOf(userinfo.role)!=-1">项目类型管理</a>
         <a href="" class="list-group-item" ng-click="selectMenu(8)" ng-class="{active: selectedMenu == 8}" ng-if="['leader', 'admin'].indexOf(userinfo.role)!=-1">客户管理</a>
         <a href="" class="list-group-item" ng-click="selectMenu(9)" ng-class="{active: selectedMenu == 9}" ng-if="['leader', 'admin'].indexOf(userinfo.role)!=-1">模板管理</a>
+        <a href="" class="list-group-item" ng-click="selectMenu(10)" ng-class="{active: selectedMenu == 10}" ng-if="['leader', 'admin'].indexOf(userinfo.role)!=-1">产品管理</a>
       </ul>
     </div>
     <div class="col-sm-9" ng-switch="selectedMenu">
@@ -57,6 +58,10 @@
       <!-- 模板管理 -->
       <div class="row" ng-switch-when="9">
         <ng-include src="'partials/settings/tab9.html'"></ng-include>
+      </div>
+      <!-- 产品管理 -->
+      <div class="row" ng-switch-when="10">
+        <ng-include src="'partials/settings/tab10.html'"></ng-include>
       </div>
     </div>
   </div>
