--- a/public/partials/settings/tab6.html
+++ b/public/partials/settings/tab6.html
@@ -1,67 +1,84 @@
 <div class="panel panel-default">
-  <div class="panel-heading">
-    <button class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#agentModal" data-backdrop="static" ng-click="tabs[6].add()">
-      <span class="glyphicon glyphicon-plus"></span>
-    </button>
-    <span class="clearfix"></span>
-  </div>
-  <table class="table table-hover">
-    <tr>
-      <th>代理商</th>
-      <th>联系人</th>
-      <th>电话</th>
-      <th></th>
-    </tr>
-    <tr ng-repeat="a in tabs[6].agentData.list">
-      <td>{{a.name}}</td>
-      <td>{{a.people}}</td>
-      <td>{{a.phone}}</td>
-      <td>
-        <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#agentModal" data-backdrop="static" ng-click="tabs[6].edit(a)">
-          <span class="glyphicon glyphicon-edit"></span>
+    <div class="panel-heading">
+        <button class="btn btn-primary btn-xs pull-right" data-toggle="modal" data-target="#agentModal"
+                data-backdrop="static" ng-click="tabs[6].add()">
+            <span class="glyphicon glyphicon-plus"></span>
         </button>
-      </td>
-    </tr>
-  </table>
+        <span class="clearfix"></span>
+    </div>
+    <table class="table table-hover">
+        <tr>
+            <th>代理商</th>
+            <th>联系人</th>
+            <th>电话</th>
+            <th></th>
+        </tr>
+        <tr ng-repeat="a in tabs[6].agentData.list">
+            <td>{{a.name}}</td>
+            <td>{{a.people}}</td>
+            <td>{{a.phone}}</td>
+            <td>
+                <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#agentModal"
+                        data-backdrop="static" ng-click="tabs[6].edit(a)">
+                    <span class="glyphicon glyphicon-edit"></span>
+                </button>
+            </td>
+        </tr>
+    </table>
 </div>
 
 
 <!-- 添加代理商 -->
 <div id="agentModal" class="modal fade">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">代理商管理</h4>
-      </div>
-      <form name="agentForm" class="form-horizontal">
-        <div class="modal-body">
-          <div class="form-group">
-            <label class="control-label col-sm-2">名称</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" ng-model="tabs[6].newAgent.name" required>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">代理商管理</h4>
             </div>
-          </div>
-          <div class="form-group">
-            <label class="control-label col-sm-2">联系人</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" ng-model="tabs[6].newAgent.people">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="control-label col-sm-2">电话</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" ng-model="tabs[6].newAgent.phone">
-            </div>
-          </div>
+            <form name="agentForm" class="form-horizontal">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label class="control-label col-sm-2">名称</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="tabs[6].newAgent.name" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2">联系人</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="tabs[6].newAgent.people">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2">电话</label>
+
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="tabs[6].newAgent.phone">
+                        </div>
+                    </div>
+                </div>
+                <table class="table table-hover">
+                    <tr>
+                        <th>产品名称</th>
+                        <th>产品单位</th>
+                        <th>产品折扣价</th>
+                    </tr>
+                    <tr data-ng-repeat="p in tabs[6].newAgent.products">
+                        <td>{{ p.name }}</td>
+                        <td>{{ p.unit }}</td>
+                        <td><input type="number" class="form-control" ng-model="p.price"></td>
+                    </tr>
+                </table>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button class="btn btn-primary" ng-click="tabs[6].save(agentForm)">保存</button>
+                </div>
+            </form>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-          <button class="btn btn-primary" ng-click="tabs[6].save(agentForm)">保存</button>
-        </div>
-      </form>
+        <!-- /.modal-content -->
     </div>
-    <!-- /.modal-content -->
-  </div>
-  <!-- /.modal-dialog -->
+    <!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->
