--- a/public/partials/projects/newProject1.html
+++ b/public/partials/projects/newProject1.html
@@ -64,13 +64,13 @@
                             <input type="date" class="form-control" ng-model="$parent.newProject.orderDate">
                         </div>
                     </div>
-                    <!--<div class="form-group">-->
-                        <!--<label class="control-label col-sm-2">价格</label>-->
+                    <div class="form-group">
+                        <label class="control-label col-sm-2">价格</label>
 
-                        <!--<div class="col-sm-10">-->
-                            <!--<input type="text" class="form-control" ng-model="$parent.newProject.price" readonly>-->
-                        <!--</div>-->
-                    <!--</div>-->
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" ng-model="$parent.newProject.price">
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label class="control-label col-sm-2">购买/年</label>
 
