--- a/public/partials/user.html
+++ b/public/partials/user.html
@@ -378,7 +378,7 @@
                   </span>
                     </td>
                 </tr>
-                <tr ng-hide="userinfo.role == 'finance'">
+                <tr ng-hide="['finace', 'market'].indexOf(userinfo.role) != -1">
                     <td colspan="6">
                         <div class="row">
                             <div class="col-sm-12">
