--- a/public/partials/projects/newProject1.html
+++ b/public/partials/projects/newProject1.html
@@ -132,7 +132,9 @@
                         <div class="col-sm-10">
                             <select class="form-control" ng-model="$parent.newProject.wx.wxType">
                                 <option value="订阅号">订阅号</option>
+                                <option value="订阅号(已认证)">订阅号(已认证)</option>
                                 <option value="服务号">服务号</option>
+                                <option value="服务号(已认证)">服务号(已认证)</option>
                             </select>
                         </div>
                     </div>
