--- a/public/partials/user.html
+++ b/public/partials/user.html
@@ -109,7 +109,9 @@
             <select class="form-control" ng-model="condition['wx.wxType']">
                 <option value="">微信类型</option>
                 <option value="订阅号">订阅号</option>
+                <option value="订阅号(已认证)">订阅号(已认证)</option>
                 <option value="服务号">服务号</option>
+                <option value="服务号(已认证)">服务号(已认证)</option>
             </select>
         </div>
         <div class="form-group">
@@ -335,7 +337,9 @@
                   <span class="edit" style="display:none;">
                     <select class="form-control" ng-model="p.wx.wxType" ng-blur="update($event, p, 'wx')">
                         <option value="订阅号">订阅号</option>
+                        <option value="订阅号(已认证)">订阅号(已认证)</option>
                         <option value="服务号">服务号</option>
+                        <option value="服务号(已认证)">服务号(已认证)</option>
                     </select>
                   </span>
                     </td>
